--- a/index.css
+++ b/index.css
@@ -1,60 +1,87 @@
 @import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Work+Sans:ital,wght@0,400;0,700;1,700&display=swap');
 
-body {
-    margin: 0;
-    padding: 0;
+@media (min-width:992px) {
+    .image {
+        height: 350px;
+        width: auto;
+    }
+
+    .nav-img {
+        height: 30px;
+    }
+
+    .p-1 {
+        font-size: 25px;
+    }
 }
 
-nav {
-    background-color: #333;
+@media (min-width:768px) {
+    .image {
+        height: 300px;
+        width: auto;
+    }
+
+    .nav-img {
+        height: 30px;
+    }
+
+    .p-1 {
+        font-size: 22px;
+    }
 }
 
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
+@media (min-width:576px) {
+    .image {
+        height: 300px;
+        width: auto;
+    }
+
+    .nav-img {
+        height: 30px;
+    }
+
+    .p-1 {
+        font-size: 23px;
+    }
 }
 
-.logo {
-    color: #fff;
-    font-size: 24px;
+@media (max-width:576px) {
+    .image {
+        height: 220px;
+        width: auto;
+    }
+
+    .nav-img {
+        height: 30px;
+    }
+
+    .p-1 {
+        font-size: 17px;
+    }
+}
+
+.h2 {
+    text-align: center;
+    color: red;
+    background-color: black;
+    border: solid red 1px;
+    height: auto;
+    padding: 5px;
+
+
+}
+
+.card {}
+
+a:link {
     text-decoration: none;
 }
-
-.nav-links {
-    list-style: none;
-    display: flex;
-}
-
-.nav-links li {
-    margin-left: 10px;
-}
-
-.nav-links li a {
-    color: #fff;
+a:visited {
     text-decoration: none;
 }
-h1{
-    color: #d0b200;
-    font-family: "Roboto";
-    font-size: 14px;
-    font-weight: 500;
+a:hover {
     text-decoration: none;
 }
-.shadow{
-    border-radius: 10px;
-
+a:active {
+    text-decoration: none;
 }
-a:link { text-decoration: none; }
-
-
-a:visited { text-decoration: none; }
-
-
-a:hover { text-decoration: none; }
-
-
-a:active { text-decoration: none; }
-
-
