--- a/index.css
+++ b/index.css
@@ -43,6 +43,10 @@
     .p-1 {
         font-size: 23px;
     }
+    .car-img{
+    width: 100%;
+    height: 55vh;
+}
 }
 
 @media (max-width:576px) {
@@ -58,6 +62,10 @@
     .p-1 {
         font-size: 17px;
     }
+    .car-img{
+    width: 100%;
+    height: 50vh;
+}
 }
 
 .h2 {
@@ -69,6 +77,10 @@
     padding: 5px;
 
 
+}
+.car-img{
+    width: 100%;
+    height: 80vh;
 }
 
 .card {}
