--- a/index.css
+++ b/index.css
@@ -27,7 +27,10 @@
         height: 300px;
         width: auto;
     }
-
+    .premiere{
+        height: 50vh;
+        width: auto;
+    }
     .nav-img {
         height: 30px;
     }
@@ -65,7 +68,10 @@
         height: 220px;
         width: auto;
     }
-
+    .premiere{
+        height: 30vh;
+        width: auto;
+    }
     .nav-img {
         height: 30px;
     }
