--- a/index.css
+++ b/index.css
@@ -69,7 +69,7 @@
         width: auto;
     }
     .premiere{
-        height: 30vh;
+        height: 100px;
         width: auto;
     }
     .nav-img {
