--- a/index.css
+++ b/index.css
@@ -9,7 +9,10 @@
     .nav-img {
         height: 30px;
     }
-
+    .premiere{
+        height: 50vh;
+        width: 100%;
+    }
     .p-1 {
         font-size: 25px;
     }
@@ -29,7 +32,7 @@
     }
     .premiere{
         height: 50vh;
-        width: auto;
+        width: 100%;
     }
     .nav-img {
         height: 30px;
@@ -53,6 +56,10 @@
     .nav-img {
         height: 30px;
     }
+    .premiere{
+        height: 60vh;
+        width: 100%;
+    }
 
     .p-1 {
         font-size: 23px;
@@ -70,7 +77,7 @@
     }
     .premiere{
         height: 100px;
-        width: auto;
+        width: 100%;
     }
     .nav-img {
         height: 30px;
@@ -113,8 +120,4 @@ a:hover {
 }
 a:active {
     text-decoration: none;
-}
-.premiere{
-    height: 50vh;
-
 }
