--- a/index.css
+++ b/index.css
@@ -73,7 +73,7 @@
 
     .car-img {
         width: 100%;
-        height: 60vh;
+        height: 70vh;
     }
 }
 
@@ -134,4 +134,32 @@ a:hover {
 
 a:active {
     text-decoration: none;
+}
+
+
+
+.your-container {
+      width: 100%;
+      overflow-x: auto;
+      white-space: nowrap; /* Prevent text wrapping */
+    }
+
+    .your-container::-webkit-scrollbar {
+      width: 12px;
+    }
+
+    .your-container::-webkit-scrollbar-thumb {
+      background-color: #888;
+    }
+
+    .your-container::-webkit-scrollbar-thumb:hover {
+      background-color: #555;
+    }
+
+    .your-container {
+      cursor: grab;
+    }
+.channel-img{
+    width: 20%;
+    height: 190px;
 }
