--- a/rana_naidu.css
+++ b/rana_naidu.css
@@ -13,3 +13,18 @@
 p{
 	padding-left: 10px;
 }
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
+}
