--- a/index.css
+++ b/index.css
@@ -48,7 +48,7 @@
 
     .car-img {
         width: 100%;
-        height: 80vh;
+        height: 60vh;
     }
 }
 
@@ -63,7 +63,7 @@
     }
 
     .premiere {
-        height: 60vh;
+        height: 50vh;
         width: 100%;
     }
 
@@ -73,7 +73,7 @@
 
     .car-img {
         width: 100%;
-        height: 70vh;
+        height: 60vh;
     }
 }
 
@@ -84,7 +84,7 @@
     }
 
     .premiere {
-        height: 250px;
+        height: 20vh;
         width: 100%;
     }
 
@@ -172,4 +172,15 @@ a:active {
     background-size: contain;
 
 
+}
+
+
+.image{
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
+.card{
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
