--- a/index.css
+++ b/index.css
@@ -27,7 +27,7 @@
 
 }
 
-@media (min-width:768px) {
+@media (max-width:768px) {
     .image {
         height: 300px;
         width: auto;
@@ -63,7 +63,7 @@
     }
 
     .premiere {
-        height: 50vh;
+        height: 70vh;
         width: 100%;
     }
 
@@ -73,7 +73,7 @@
 
     .car-img {
         width: 100%;
-        height: 60vh;
+        height: 70vh;
     }
 }
 
