--- a/index.css
+++ b/index.css
@@ -13,6 +13,8 @@
     .premiere {
         height: 50vh;
         width: 100%;
+        border-radius: 10px;
+        padding: 4px;
     }
 
     .p-1 {
@@ -23,6 +25,7 @@
         width: 100%;
         height: 80vh;
     }
+
 
 
 }
@@ -36,6 +39,8 @@
     .premiere {
         height: 50vh;
         width: 100%;
+        border-radius: 10px;
+        padding: 4px;
     }
 
     .nav-img {
@@ -65,6 +70,8 @@
     .premiere {
         height: 70vh;
         width: 100%;
+        border-radius: 10px;
+        padding: 4px;
     }
 
     .p-1 {
@@ -86,7 +93,10 @@
     .premiere {
         height: 20vh;
         width: 100%;
+        border-radius: 10px;
+        padding: 4px;
     }
+
 
     .nav-img {
         height: 30px;
@@ -100,6 +110,7 @@
         width: 100%;
         height: 40vh;
     }
+
 }
 
 .h2 {
@@ -185,10 +196,3 @@ a:active {
     border-bottom-left-radius: 10px;
 }
 
-.premieres{
-    border-radius: 30px;
-}
-
-.premiere{
-    border-radius: 30px;
-}
