--- a/index.css
+++ b/index.css
@@ -83,7 +83,32 @@
         height: 70vh;
     }
 }
+@media (min-width:768px) {
+    .image {
+        height: 250px;
+        width: auto;
+    }
 
+    .premiere {
+        height: 20vh;
+        width: 100%;
+        border-radius: 10px;
+        padding: 4px;
+    }
+
+    .nav-img {
+        height: 30px;
+    }
+
+    .p-1 {
+        font-size: 22px;
+    }
+
+    .car-img {
+        width: 100%;
+        height: 40vh;
+    }
+}
 @media (max-width:576px) {
     .image {
         height: 220px;
